--- a/app-of-apps/prometheus-stack.yaml
+++ b/app-of-apps/prometheus-stack.yaml
@@ -18,7 +18,7 @@ spec:
         # - $values/app-of-apps/prom-stack-files/prometheus-service-monitor.yaml
 
     - repoURL: git@github.com:barrozz/argoCD-discovery.git
-      targetRevision: main
+      targetRevision: HEAD
       ref: values
 
   destination:
