--- a/app-of-apps/prometheus-stack.yaml
+++ b/app-of-apps/prometheus-stack.yaml
@@ -23,7 +23,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-prometheus-stack
+    namespace: default
 
   syncPolicy:
     syncOptions:
